--- a/source/templates/index.html
+++ b/source/templates/index.html
@@ -13,6 +13,7 @@
 
 {% block content %}
     <p class="card-title text-center">{% trans "Оставьте Вашу заявку" %}</p>
+    <p>tettete</p>
     <div class="card-body">
         <h6 class="font-weight-light">{% trans "Заполните все поля и выберете интересующие Вас предметы:" %}</h6>
         <form class="forms-sample" action="" method="post">
